--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,6 +7,12 @@
   </head>
   <body id="page-top">
     
+     <%if Helpers.is_logged_in?(session)%>
+        Welcome <%= Helpers.current_user(session).username %>
+      <p>>Balance: <%= Helpers.current_user(session).balance %></p>
+    
+      <h3><a href="/logout">Log Out</a></h4>
+    <% end %>
 
   </body>
 </html>
