--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
-    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
+    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-    
-  <form method="POST" action='/login'>
-    <p>Username: <input type="text" name="username"></p>
-    <p>Password: <input type="password" name="password"></p>
-    <input type="submit" value="Log In">
-</form> 
-
-
+  <form method="POST" action="/login">
+    username:<input type="text" id="username" value="username" name="username">
+    password:<input type="text" id= "password" value="password" name="password">
+    <input type="submit" id="Log In" value="Log In">
+  </form>
   </body>
 </html>
