--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,11 +7,11 @@
   </head>
   <body id="page-top">
     
-     <%if Helpers.is_logged_in?(session)%>
-        Welcome <%= Helpers.current_user(session).username %>
-      <p>>Balance: <%= Helpers.current_user(session).balance %></p>
+      <% if Helpers.is_logged_in?(session) %>
+      <h1>Welcome <%= Helpers.current_user(session).username %></h1>
+      <h3>Your Balance: <%= Helpers.current_user(session).balance %></h3>
     
-      <h3><a href="/logout">Log Out</a></h4>
+      <h4><a href="/logout">Log Out</a></h4>
     <% end %>
 
   </body>
